@@ -1,1 +1,2 @@
 Simon Wenner <simon@wenner.ch>
+Markus Huggler <markus.huggler@wellengang.ch>
